style/style.css
/* ***** VARIABLES ***** */
:root {
  --font-sans-serif: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
  --font-serif: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  --font-monospace: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
  --color-background: #EFF1F5;
  --color-text: #4C4F69;
  --color-text2: #6C6F85;
  --color-text2-underline: #6C6F85AA;
  --color-accent: #7287FD;
  --color-green: #40A02B;
  --color-red: #E64553;
  --color-skip-btn-fg: #7287FD;
  --color-skip-btn-bg: #dce0e8;
  --color-streak-overlay-fg: #EFF1F5;
  --color-hr: #DCE0E8;
  --color-placeholder: #9CA0B0;
  --color-footer-hr: #BCC0CC;
}
html.dark {
  --color-background: #1E1E2E;
  --color-text: #CDD6F4;
  --color-text2: #A6ADC8;
  --color-placeholder: #A6ADC8;
  --color-text2-underline: #A6ADC8DD;
  --color-accent: #B4BEFE;
  --color-green: #a6e3a1;
  --color-red: #F38BA8;
  --color-skip-btn-fg: #B4BEFE;
  --color-skip-btn-bg: #313244;
  --color-streak-overlay-fg: #CDD6F4;
  --color-hr: #45475A;
  --color-footer-hr: #45475A;
}


/* ***** MAIN ***** */
*,
*:before,
*:after {
  box-sizing: border-box;
}

html {
  height: 100%;
  font-size: 62.5%;
  font-family: var(--font-sans-serif);
  text-rendering: optimizeLegibility;
  scroll-behavior: smooth;
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}
/* Disable smooth scrolling if reduced motion is active */
@media (prefers-reduced-motion:reduce) {
  html {scroll-behavior: auto;}
}

body {
  font-size: 2rem;
  color: var(--color-text);
  background-color: var(--color-background);
  width: 100%;
  margin: 0 auto;
  padding: 0 3rem;
  line-height: 1.6;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}
/* ***** BACKGROUND GRADIENT COLOR ***** */
/* body {
  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: 100dvh;
  background: linear-gradient(135deg, var(--color-background) 0%, var(--color-red) 500%);
} */

h1 { font-size: 1.64em; }
h2 { font-size: 1.4em; }
h3 { font-size: 1.2em; }
h4 { font-size: 1em; }
h5 { font-size: 0.8em; }
h5 { font-size: 0.6em; }
main h1 {
  line-height: 1.2;
  margin: 0 0 1.2rem;
}
h2 {
  line-height: 1;
  margin: 3.2rem 0 1.6rem;
}
h3 {
  line-height: 1;
  margin: 2.4rem 0 1.2rem;
}
h4,
h5,
h6 {
  line-height: 1.16;
  margin: 2.4rem 0 0.8rem;
}

main hr {
  margin: 3.2rem 0;
  border-color: var(--color-hr);
}


/* ***** HEADER ***** */
header#banner {
  display: flex;
  justify-content: space-between;
  margin: 2rem 0 4rem;
}
header#banner h1 {
  display: inline-block;
  font-size: 1.4em;
  margin: 0;
  background: linear-gradient(to right, var(--color-accent), var(--color-red));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
header#banner h1 a {
  color: var(--color-text);
}
header#banner nav {
  display: flex;
  align-items: center;
}
header#banner nav a {
  color: var(--color-text2);
  text-decoration: underline;
  text-decoration-color: var(--color-text2-underline);
  text-decoration-thickness: 1px;
  margin: 0;
}
header#banner nav a:not(:last-of-type) {
  margin-right: 1.6rem;
}
header#banner nav a#navbar-curr-page {
  text-decoration: none;
  cursor: default;
}


/* ***** LINKS ***** */
a {
  cursor: pointer;
  color: var(--color-accent);
  text-decoration: none;
  text-decoration-thickness: 1px;
  text-underline-offset: 3px;
}
a:active:not(#navbar-curr-page) {
  filter: brightness(80%);
}

/* Mark external links. */
main a[href^="http"]:not([href*="turkingo.netlify.app"]):not(#random-post-link)::after {
  content:"↗"/" (external)";
  font-size: .9em;
  white-space: pre;
  display: inline-block;
  margin-right: 0.2em;
}

a:hover,
a:focus,
a:hover::after,
a:focus::after {
  text-decoration: underline;
  text-decoration-thickness: 1px;
}
a:visited {
  text-decoration: none;
}
header#banner h1 a:hover,
header#banner h1 a:focus {
  text-decoration: none;
}
header#banner h1 a:visited {
  text-decoration: none;
}
main p a,
main p a::after {
  text-decoration: underline;
}


/* ***** BUTTON ***** */
input {
  padding: 10px;
  width: 100%;
  margin-top: 12px;
  margin-bottom: 12px;
  border-radius: 8px;
  border: 1px solid #cccccc;
}
input:disabled {
  cursor: default;
}

::placeholder {
  color: var(--color-placeholder);
  opacity: 1;
}
::-ms-input-placeholder {
  color: var(--color-placeholder);
}


/* ***** BUTTON ***** */
button:disabled {
  opacity: 0.4;
  cursor: default;
}


/* ***** LIST ***** */
.list {
  list-style-type: none;
  padding: 0;
}
li:not(:last-child) {
  padding-bottom: 0.8rem;
}


/* ***** TEXT & PARAGRAPHS ***** */
p {
  text-align: left;
  margin: 0;
}
main {
  line-height: 1.6;
}
main p + p {
  margin-top: 1em;
}
main p.post-info + p {
  margin-top: 0;
}

.feedback {
  margin-top: 15px;
}


/* ***** FOOTER ***** */
/* Stretch main to fill all remaining space towards the bottom of the page. */
main {
  flex: 1;
}
footer {
  width: 100%;
  margin: 3.2rem 0 1.2rem;
  font-size: 1.7rem;
  line-height: 1.7;
}
footer hr {
  border-style: dashed;
  border-color: var(--color-footer-hr);
}
footer p {
  color: var(--color-text2);
}
footer a {
  color: var(--color-text2);
  text-decoration: underline;
  text-decoration-color: var(--color-text2-underline);
  text-decoration-thickness: 1px;
}
#btn-theme {
  cursor: pointer;
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  font-family: inherit;
  font-size: inherit;
  color: var(--color-text2);
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 3px;
  text-decoration-color: var(--color-text2-underline);
}


/* ***** DESKTOP VERSION ***** */
@media screen and (min-width:770px) {
  body {
    width: 750px;
  }
  header#banner {
    line-height: 1.4;
  }
}

/* ***** MOBILE VERSION ***** */
@media screen and (max-width:600px) {
  header#banner {
    margin: 2rem 0 2.8rem;
    display: block;
  }
}

@media screen and (max-width:500px) {
  body {
    height: 100%;
    font-size: 1.7rem;
    min-height: 100%;
    padding: 0 2.4rem;
  }
  main {
    line-height: 1.65;
  }
  footer {
    margin-bottom: 0;
    padding-bottom: 0.4rem;
  }
}

@media screen and (max-width:370px) {
  body {
    padding: 0 1.6rem;
  }
}

